Back-end/be-k8s/webing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary-by-header: "cookie, canary"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - host: mytravel-123.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 4200
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontendv2-service
                port:
                  number: 4200
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: backend-auth-service
                port:
                  number: 5000
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: backend-auth-service
                port:
                  number: 5000
          - path: /view
            pathType: Prefix
            backend:
                service:
                  name: backend-tours-service
                  port:
                    number: 5000
          - path: /add
            pathType: Prefix
            backend:
                service:
                  name: backend-tours-service
                  port:
                    number: 5000
          - path: /delete
            pathType: Prefix
            backend:
                service:
                  name: backend-tours-service
                  port:
                    number: 5000
          - path: /put
            pathType: Prefix
            backend:
                service:
                  name: backend-tours-service
                  port:
                    number: 5000
